--- a/fly.toml
+++ b/fly.toml
@@ -11,12 +11,12 @@ primary_region = 'fra'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
 [[vm]]
-  memory = '1gb'
+  memory = "512mb"  # Минимум для стабильной работы
   cpu_kind = 'shared'
   cpus = 1
