--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,22 @@
-# fly.toml app configuration file generated for antispam-surv-bot-divine-dream-9016 on 2025-04-05T13:39:08+03:00
+# fly.toml app configuration file generated for antispam-surv-bot on 2025-04-05T14:15:13+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'antispam-surv-bot-divine-dream-9016'
-primary_region = 'fra'
+app = 'antispam-surv-bot'
+primary_region = 'arn'
 
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'off'
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
